[package]
name = "linkopenbot"
version = "0.1.0"
authors = ["Ramesh Balaji <post2rb@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systray = "0.4"
opener = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1"

[dependencies.serenity]
default-features = false
features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "cache"
]
version = "0.9"
